Broken Link hotfix

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/1_css/reset.css">
-    <link rel="stylesheet" href="/1_css/style.css">
+    <link rel="stylesheet" href="1_css/reset.css">
+    <link rel="stylesheet" href="1_css/style.css">
     
 
     <title>Home</title>
-    <link rel="icon" href="/3_images/UnchartedNebula.jpg">
+    <link rel="icon" href="3_images/UnchartedNebula.jpg">
 </head>
 <body>
 
@@ -29,9 +29,9 @@
                     <label for="checkbox_toggle" class="hamburger">&#9776;</label>
                     <div class="menu">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="/2_pages/about.html">About</a></li>
-                        <li><a href="/2_pages/releases.html">Current Releases</a></li>
-                        <li><a href="/2_pages/catalog.html">The Catalog</a></li>
+                        <li><a href="2_pages/about.html">About</a></li>
+                        <li><a href="2_pages/releases.html">Current Releases</a></li>
+                        <li><a href="2_pages/catalog.html">The Catalog</a></li>
                     </div>
                 </ul>
             </nav>
