Catalog format and skeleton
Additional changes include correction to the logo button link to home page

--- a/2_pages/about.html
+++ b/2_pages/about.html
@@ -19,7 +19,7 @@
 
         <div id="header">
             <div id="splash-img">
-                <a href="https://linktr.ee/"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
+                <a href="../index.html"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
                 <div id="splash-text">Uncharted Nebula</div>
             </div>
 
