--- a/2_pages/catalog.html
+++ b/2_pages/catalog.html
@@ -19,7 +19,7 @@
 
         <div id="header">
             <div id="splash-img">
-                <a href="https://linktr.ee/"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
+                <a href="../index.html"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
                 <div id="splash-text">Uncharted Nebula</div>
             </div>
 
@@ -43,8 +43,19 @@
             <h2>Trying to catch up? Curious what else Uncharted Nebula has to offer? The Catalog contains everything that E. B. has published, well-organized and easily accessible.</h2>
         
             <div class="collection">
-                <div class="card">
-
+                <div class="card-row">
+                    <div class="card-sm border-label-1">
+                        <h2>Nivalis-1</h2>
+                        <img src="http://fpoimg.com/200x300" style="margin: auto;">
+                    </div>
+                    <div class="card-sm border-label-2">
+                        <h2>Helios</h2>
+                        <img src="http://fpoimg.com/200x300" style="margin: auto;">
+                    </div>
+                    <div class="card-sm border-label-3">
+                        <h2>Isthmus</h2>
+                        <img src="http://fpoimg.com/200x300" style="margin: auto;">
+                    </div>
                 </div>
             </div>
         </div>
