--- a/2_pages/releases.html
+++ b/2_pages/releases.html
@@ -19,7 +19,7 @@
 
         <div id="header">
             <div id="splash-img">
-                <a href="https://linktr.ee/"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
+                <a href="../index.html"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
                 <div id="splash-text">Uncharted Nebula</div>
             </div>
 
@@ -40,7 +40,7 @@
 
         <div id="content">
             <h1>Probably will be the most visited page.</h1>
-            <h2>Just a page of "blog post" cards. This is where new episodes drop and this is where they are found.</h2>
+            <h2>Just a page of cards. This is where new episodes drop and this is where they are found.</h2>
 
             <div class="collection">
                 <div class="card">
