--- a/2_pages/about.html
+++ b/2_pages/about.html
@@ -39,7 +39,12 @@
         </div>
 
         <div id="content">
-            <h1>Curious about the mysterious E. B.? Want to learn more about what to expect from his writing? Are you a kind and generous soul searching for a way to donate your hard-earned money so the poor sap can purchase a coffee?</h1>
+            <aside>
+                <img src="http://fpoimg.com/100x100" style="margin: auto; border-radius: 50%;">
+                <h2>E.B</h2>
+                <p>The creator of the Uncharted Nebula project, E.B. is an author, writer, and (above all), a reader.</p>
+            </aside>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cras ornare arcu dui vivamus arcu felis bibendum. Ridiculus mus mauris vitae ultricies. Nunc consequat interdum varius sit amet mattis. In fermentum posuere urna nec. Leo urna molestie at elementum eu facilisis sed odio. Consectetur a erat nam at lectus urna duis convallis convallis. Tincidunt vitae semper quis lectus nulla at volutpat. Eget mi proin sed libero enim sed faucibus turpis in. Nec dui nunc mattis enim ut tellus elementum sagittis vitae. Elit sed vulputate mi sit amet mauris. Semper auctor neque vitae tempus quam pellentesque.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Cras ornare arcu dui vivamus arcu felis bibendum. Ridiculus mus mauris vitae ultricies. Nunc consequat interdum varius sit amet mattis. In fermentum posuere urna nec. Leo urna molestie at elementum eu facilisis sed odio. Consectetur a erat nam at lectus urna duis convallis convallis. Tincidunt vitae semper quis lectus nulla at volutpat. Eget mi proin sed libero enim sed faucibus turpis in. Nec dui nunc mattis enim ut tellus elementum sagittis vitae. Elit sed vulputate mi sit amet mauris. Semper auctor neque vitae tempus quam pellentesque.</p>
         </div>
 
     </div>
