--- a/2_pages/about.html
+++ b/2_pages/about.html
@@ -19,14 +19,19 @@
 
         <div id="header">
             <div id="splash-img">
-                <a href="../index.html"><img src="../3_images/UnchartedNebula.jpg" class="logo"></a>
                 <div id="splash-text">Uncharted Nebula</div>
             </div>
 
             <nav class="nav-bar">
                 <ul class="nav-links">
-                    <input type="checkbox" id="checkbox_toggle" />
-                    <label for="checkbox_toggle" class="hamburger">&#9776;</label>
+                    <span onclick="openNav()" class="openBtn"><i class="fa fa-bars"></i></span>
+                <div class="overlay-content" id="nav">
+                    <span href="javascript:void(0)" class="closeBtn" onclick="closeNav()">&times;</span>
+                    <a href="../index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="releases.html">Current Releases</a>
+                    <a href="catalog.html">The Catalog</a>
+                </div>
 
                     <div class="menu">
                         <li><a href="../index.html">Home</a></li>
@@ -56,6 +61,6 @@
         <a href="https://www.buymeacoffee.com/"><i class="fa fa-coffee"></i></a>
         <p>&copy; 2022 Uncharted Nebula</p>
     </div>
-    
+    <script src="../4_js/mobile_nav.js" type="text/javascript"></script>
 </body>
 </html>
