--- a/2_pages/catalog.html
+++ b/2_pages/catalog.html
@@ -45,7 +45,7 @@
 
         <div id="content">
             <h1>The Catalog</h1>
-            <h2>Trying to catch up? Curious what else Uncharted Nebula has to offer? The Catalog contains everything that E. B. has published, well-organized and easily accessible.</h2>
+            <h2>Trying to catch up? Curious what else Uncharted Nebula has to offer? The Catalog contains everything that Uncharted Nebula has published, well-organized and easily accessible.</h2>
         
             <div class="collection">
                 <div class="card-row">
