--- a/2_pages/catalog.html
+++ b/2_pages/catalog.html
@@ -49,18 +49,24 @@
         
             <div class="collection">
                 <div class="card-row">
+                    <a href="series/showcase_example.html">
                     <div class="card-sm border-label-1">
                         <h2>Nivalis-1</h2>
                         <img src="http://fpoimg.com/200x300" style="margin: auto;">
                     </div>
+                    </a>
+                    <a href="series/showcase_example.html">
                     <div class="card-sm border-label-2">
                         <h2>Helios</h2>
                         <img src="http://fpoimg.com/200x300" style="margin: auto;">
                     </div>
+                    </a>
+                    <a href="series/showcase_example.html">
                     <div class="card-sm border-label-3">
                         <h2>Isthmus</h2>
                         <img src="http://fpoimg.com/200x300" style="margin: auto;">
                     </div>
+                    </a>
                 </div>
             </div>
         </div>
